# genkey

./: README.md  pyproject.toml  setup.cfg
src/genkey/: __init__.py  main.py
src/genkey.egg-info/: PKG-INFO
