[metadata]
name = genkey
version = 0.1.0
author = dawid-ai
author_email = hello@dawid.ai
description = A simple command-line tool to generate secure keys and passwords
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dawid-ai/genkey
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Security :: Cryptography

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    genkey = genkey.main:main